# graph2sql

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  spider_eval.py
examples/: ecommerce.py  sqlalchemy_introspection.py
graph2sql/: __init__.py  cte.py  graph.py  matching.py  ranking.py  types.py
tests/: test_cte.py  test_ddl.py  test_graph.py  test_matching.py  test_ranking.py  test_sqlalchemy.py
